fixed login spacing and coloring

--- a/frontend/tracker-app/src/styles/Login.css
+++ b/frontend/tracker-app/src/styles/Login.css
@@ -72,3 +72,11 @@ label {
   color: #FF914D;
 }
 
+p {
+  color:#FF914D
+}
+
+
+a {
+  color:#FF914D;
+}
